<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ListRegistrarPurchase"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewListPurchase"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Registrar Cesta de Compra"
        android:textSize="20dp" />
    <EditText
        android:id="@+id/editNameList"
        android:hint="Nombre de la Lista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="50"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        />

    <EditText
        android:id="@+id/editLimitList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:hint="S/. limite de compra (Opcional)"

        android:inputType="number"
        android:selectAllOnFocus="false"
        android:singleLine="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/color_select_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Color"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="20dp"

            />

        <Button
            android:id="@+id/color_select_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="20dp"

            android:backgroundTint="@color/white"
           />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/icon_select_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Icono"
            android:textColor="@color/colorAccent"
            android:layout_marginLeft="20dp"


            />

        <com.maltaisn.icondialog.IconView
            android:id="@+id/icon_select_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="20dp"
            android:background="@color/md_grey_100"
           />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegistrarEditPurchase"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_weight="0.2"
            android:background="@drawable/btn_dialog"
            android:contentDescription="@string/btn_agregarp"
            android:paddingTop="10dp"
            android:text="Registrar"
            android:textColor="#FFFFFFFF" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:background="@drawable/btn_dialog"
            android:paddingTop="10dp"
            android:text="Cancelar"
            android:textColor="#FFFFFFFF" />

    </LinearLayout>


</LinearLayout>