<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"

    android:id="@+id/ListPurchaseCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?android:attr/selectableItemBackground"
    card_view:cardBackgroundColor="#E2E2E2"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/listViewPurchase"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lista de Producto"
                android:textAlignment="center"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"

                >

                <TextView
                    android:id="@+id/textViewLimit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:text="Limite de Compra"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewActual"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:text="Compra Actual"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewCount"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:maxLines="3"
                    android:text="Cantidad de Producto"
                    android:textAlignment="center"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>

        <com.maltaisn.icondialog.IconView
            android:id="@+id/imgIcon"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:src="@drawable/ic_image"
            app:srcCompat="@drawable/ic_image" />


    </LinearLayout>
</androidx.cardview.widget.CardView>