<resources>
    <string name="app_name">ScanMarketClient</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_web_client_id2">28992138434-det5cnudvuuot8rushpg1arr6qj791kb.apps.googleusercontent.com</string>
    <string name="facebook_app_id">1029622234619928</string>
    <string name="fb_login_protocol_scheme">fb1029622234619928</string>
    <string name="burger_descripcion">Burger</string>
    <string name="btn_agregarp"></string>
    <string name="tfe_od_app_name" translation_description="Object Detection demo app [CHAR_LIMIT=40]">TFL Detect</string>
    <string name="tfe_od_camera_error" translation_description="Error regarding camera support[CHAR_LIMIT=40]">This device doesn\'t support Camera2 API.</string>

</resources>